tests/negative/input_test_inheritance.py
class SoyInteligente(SoyInteligente):
    def __init__(self) -> None:
        self.iq = 1000000000

    def increible() -> None:
        print("Ese soy yo")